src/snapshots/docker_registry_rs__manifest__tests__list__deserialize__example.snap
---
source: src/manifest.rs
expression: out
---
List {
    schema_version: V2,
    media_type: "application/vnd.docker.distribution.manifest.list.v2+json",
    manifests: [
        Manifest {
            media_type: "application/vnd.docker.distribution.manifest.v2+json",
            size: 7143,
            digest: "sha256:e692418e4cbaf90ca69d05a66403747baa33ee08806650b51fab815ad7fc331f",
            platform: Platform {
                architecture: Ppc64le,
                os: Linux,
                os_version: None,
                os_features: None,
                variant: None,
                features: [],
            },
        },
        Manifest {
            media_type: "application/vnd.docker.distribution.manifest.v2+json",
            size: 7682,
            digest: "sha256:5b0bcabd1ed22e9fb1310cf6c2dec7cdef19f0ad69efa1f392e94a4333501270",
            platform: Platform {
                architecture: Amd64,
                os: Linux,
                os_version: None,
                os_features: None,
                variant: None,
                features: [
                    "sse4",
                ],
            },
        },
    ],
}
