src/snapshots/docker_registry_rs__manifest__tests__list__deserialize__trivy.snap
---
source: src/manifest.rs
expression: out
---
List {
    schema_version: V2,
    media_type: "application/vnd.docker.distribution.manifest.list.v2+json",
    manifests: [
        Manifest {
            media_type: "application/vnd.docker.distribution.manifest.v2+json",
            size: 1159,
            digest: "sha256:4704989dd70bd0145e3820b6ce68cbfcc9a5e6e9a222a88ceaef1001dcccb1de",
            platform: Platform {
                architecture: Amd64,
                os: Linux,
                os_version: None,
                os_features: None,
                variant: None,
                features: [],
            },
        },
        Manifest {
            media_type: "application/vnd.docker.distribution.manifest.v2+json",
            size: 1159,
            digest: "sha256:c28826c9944b53ec9405bfd0efcf78a096e0970f38e4a2f0cdc62ea3fa0ea61e",
            platform: Platform {
                architecture: Arm64,
                os: Linux,
                os_version: None,
                os_features: None,
                variant: None,
                features: [],
            },
        },
        Manifest {
            media_type: "application/vnd.docker.distribution.manifest.v2+json",
            size: 1159,
            digest: "sha256:fd48d0f733fbf19f6ad8c6238330c163c64089f2c7d22f17d841287b456c087f",
            platform: Platform {
                architecture: Ppc64le,
                os: Linux,
                os_version: None,
                os_features: None,
                variant: None,
                features: [],
            },
        },
        Manifest {
            media_type: "application/vnd.docker.distribution.manifest.v2+json",
            size: 1159,
            digest: "sha256:289f91dc4759e9376f8124715363b33a282fc7c704be6aa7e3852b966c40c084",
            platform: Platform {
                architecture: S390x,
                os: Linux,
                os_version: None,
                os_features: None,
                variant: None,
                features: [],
            },
        },
    ],
}
